--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": {
     "name": "Manos Papoutsakis",
-    "email": "m_papous@hotmail.com",
+    "email": "m_papous@hotmail.com"
   },
   "files": [
     "lib"
