--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.2"
   },
+  "homepage": "http://manouli.github.io/styleguide/",
   "scripts": {
     "prestart": "npm run gen:docs",
     "start": "npm-run-all --parallel start:docs gen:docs-watch",
