--- a/lib/package.json
+++ b/lib/package.json
@@ -10,7 +10,7 @@
     "components",
     "react",
     "react-component",
-    "toolkit",
+    "toolkit"
   ],
   "dependencies": {
     "highlight.js": "^9.10.0",
