--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "components",
     "react",
     "react-component",
-    "toolkit",
+    "toolkit"
   ],
   "dependencies": {
     "highlight.js": "^9.10.0",
